--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,42 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+html {
+    font-size: 12px; 
+    @include breakpoint($medium) {
+        font-size: 12px; // originally 18px
+    }
+
+    @include breakpoint($large) {
+        font-size: 14px; // originally 20px
+    }
+
+    @include breakpoint($x-large) {
+        font-size: 16px; // originally 22px
+    }
+}
+@media (min-width: 80em) {
+    .author__avatar {
+        display: table-cell;
+        vertical-align: top;
+        width: 80px;
+        height: 80px;
+    
+        @include breakpoint($large) {
+        display: block;
+        width: auto;
+        height: auto;
+        }
+    
+        img {
+        max-width: 200px;
+        border-radius: 50%;
+    
+        @include breakpoint($large) {
+            padding: 5px;
+            border: 1px solid $border-color;
+        }
+        }
+    }
+}
